Fixed horizontal scrollbar - Materialize.css added a hiddendiv.common, which would preserve the width one the screen loaded, and then never change, forcing a horizontal scrollbar when the screen size changes - I have added that this dic should always have a width of 0, and this is no longer an issue.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -100,3 +100,7 @@ main {
 .flex-grow{
   flex:1;
 }
+
+.hiddediv{
+  width:0px!important;
+}
